# Powerthone

./: .replit  FILES_REFERENCE.md  INSTALLATION.md  MODEL_EXPLANATION_VISUAL.md  PRESENTATION_QUICK_START.md  README.md  SETUP_GUIDE.md  STAKEHOLDER_PRESENTATION.md  TECHNICAL_ARCHITECTURE.md  pyproject.toml  run_fastapi.sh
client/: index.html
client/src/: App.tsx  index.css
client/src/components/dashboard/: emissions-chart.tsx  overview-metrics.tsx  report-view.tsx
client/src/components/layout/: footer.tsx  shell.tsx  sidebar.tsx
client/src/lib/: api.ts  data.ts
client/src/pages/: dashboard.tsx  reports.tsx
ml_backend/: api.py  emissions_model.pkl  model_metadata.json  train_model.py
