[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.125.0",
    "joblib>=1.5.3",
    "numpy>=2.3.5",
    "pandas>=2.3.3",
    "pydantic>=2.12.5",
    "scikit-learn>=1.8.0",
    "statsmodels>=0.14.6",
    "uvicorn>=0.38.0",
    "xgboost>=3.1.2",
]
